<resources>
    <string name="app_name">Modu Track</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">John.Doe@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Aston Map</string>
    <string name="menu_module">Module Information</string>
    <string name="menu_Setting">Settings</string>
    <string name="menu_train">Train Information</string>
    <string name="menu_trainmap">Trains map</string>
    <string name="Train_service_button">Train Information</string>


<!--    aston map buttons-->
    <string name="AstonMBMain">Main Entrance</string>
    <string name="AstonMBOOH">Main Build - OOH</string>
    <string name="AstonLibrary">Aston Library</string>
    <string name="AstonSU">Student union</string>
    <string name="AstonMosque">Aston Mosque</string>

    <string name="ResetMarkers">add Markers</string>

    <string name="astonshop">Aston Shops</string>
    <string name="astonCampus">Aston Campus</string>







    <string name="argumentnameTrainMap">TrainServices</string>
    <string name="toturorial_room">Toturorial Room E.g MB</string>
    <string name="tutorial_room_label">Tutorial Room: </string>
    <string name="lecture_room">Lecture Room E.g MB</string>
    <string name="lecture_room_label">Lecture Room: </string>
    <string name="exam">Exam</string>
    <string name="nameLabel">Name: </string>
    <string name="date">Date: </string>
    <string name="Module">Module: </string>
    <string name="ModuleName">Module Name </string>
    <string name="ModuleCode">Code</string>
    <string name="exam_date">Ex Date</string>
    <string name="DatePicker">Date</string>
    <string name="Assigment1">Assigment 1: </string>
    <string name="Assigment2">Assigment 2: </string>
    <string name="Exam">Exam: </string>


    <string name="delete_module_button">Delete Module button</string>
    <string name="add_module_button">add Module to database button</string>
    <string name="edit_module_button">edit Module button</string>
    <string name="module_code">Module Code</string>
    <string name="assigment">Assigment</string>
    <string name="edit_module">Edit Module:</string>
    <string name="add_module">Add Module:</string>
</resources>