<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_module">

    <fragment
            android:id="@+id/nav_train"
            android:name="uk.ac.aston.cs3mdd.mobiledesignproject.ui.Train.TrainFragment"
            android:label="@string/menu_train"
            tools:layout="@layout/fragment_train" >

            <action
                android:id="@+id/action_nav_train_to_nav_trainmap"
                app:destination="@id/nav_trainmap" />
    <!--        keeps this action inside of this fragment otherwise trainlistadabter will complain-->

    </fragment>

    <fragment
            android:id="@+id/nav_map"
            android:name="uk.ac.aston.cs3mdd.mobiledesignproject.ui.Map.MapFragment"
            android:label="@string/menu_map"
            tools:layout="@layout/fragment_map" />



    <fragment
            android:id="@+id/nav_trainmap"
            android:name="uk.ac.aston.cs3mdd.mobiledesignproject.ui.Train.Trainmap.TrainMapFragment"
            android:label="@string/menu_trainmap"
            tools:layout="@layout/fragment_trainmap" >
            <action
                android:id="@+id/action_nav_trainmap_to_nav_train"
                app:destination="@id/nav_train" />

            <argument
                android:name="Trainervices"
                app:argType="uk.ac.aston.cs3mdd.mobiledesignproject.ui.Train.TrainAPI.TrainService" />
    </fragment>
    <fragment
        android:id="@+id/nav_moduleAdd"
        android:name="uk.ac.aston.cs3mdd.mobiledesignproject.ui.Module.managedata.ModuleAddFragment"
        android:label="Module Add"
        tools:layout="@layout/popup_add_module" >

        <action
        android:id="@+id/action_moduleadd_to_module"
        app:destination="@id/nav_module" />

    </fragment>





    <fragment
            android:id="@+id/nav_module"
            android:name="uk.ac.aston.cs3mdd.mobiledesignproject.ui.Module.ModuleFragment"
            android:label="@string/menu_module"
            tools:layout="@layout/fragment_module" >
        <action
            android:id="@+id/action_module_to_moduleAdd"
            app:destination="@id/nav_moduleAdd" />
        <action
            android:id="@+id/action_module_to_moduleEdit"
            app:destination="@id/nav_moduleEdit" />

    </fragment>

    <fragment
        android:id="@+id/nav_moduleEdit"
        android:name="uk.ac.aston.cs3mdd.mobiledesignproject.ui.Module.managedata.ModuleEditFragment"
        android:label="@string/menu_module"
        tools:layout="@layout/popup_edit_module" >

        <argument
            android:name="CurrentModules"
            app:argType="uk.ac.aston.cs3mdd.mobiledesignproject.ui.Module.data.Module" />

        <action
            android:id="@+id/action_nav_moduleEdit_to_nav_module"
            app:destination="@id/nav_module" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="uk.ac.aston.cs3mdd.mobiledesignproject.ui.Settings.SettingsFragment"
        android:label="SettingsFragment"
        tools:layout="layout/fragment_settings"/>

    <activity
        android:id="@+id/mainActivity"
        android:name="uk.ac.aston.cs3mdd.mobiledesignproject.MainActivity"
        android:label="app_bar_main"
        tools:layout="@layout/app_bar_main" />

    <!--    <fragment-->
<!--        android:id="@+id/nav_testmodule"-->
<!--        android:name="uk.ac.aston.cs3mdd.mobiledesignproject.ui.TestModule.TestModuleFragment"-->
<!--        android:label="@string/menu_train"-->
<!--        tools:layout="@layout/fragment_train" >-->
<!--    </fragment>-->



</navigation>

