<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    android:layout_margin="10dp"
    tools:context=".ui.Module.managedata.ModuleAddFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondary">


        <Button
            android:id="@+id/buttonAddModule"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="-1sp"
            android:background="@drawable/baseline_thumb_up_24"
            android:contentDescription="@string/delete_module_button" />



        <!--        this is related to the Module-->
        <TextView
            android:id="@+id/ModuleCodeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Module"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="57sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/popupModuleCodeEdit"
            android:minWidth="48sp"
            android:minHeight="48sp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_marginTop="45sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_toEndOf="@id/ModuleCodeLabel"
            android:layout_height="wrap_content"
            android:hint="@string/ModuleCode"/>
        <TextView
            android:id="@+id/ModuleNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="module "
            android:textSize="15sp"
            android:layout_marginStart="4sp"
            android:textStyle="bold"
            android:layout_marginTop="57sp"
            android:layout_toEndOf="@id/popupModuleCodeEdit"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/popupModuleNameEdit"
            android:minWidth="48sp"
            android:minHeight="48sp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_marginTop="45sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_toEndOf="@id/ModuleNameLabel"
            android:layout_height="wrap_content"
            android:hint="Module Name"/>



        <!--        this is related to the assignment-->
        <TextView
            android:id="@+id/AssignmentDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="15sp"
            android:minHeight="48sp"
            android:textStyle="bold"
            android:layout_marginTop="14sp"
            android:layout_below="@id/popupModuleCodeEdit"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/popupAssignmentDateEdit"
            android:minWidth="48sp"
            android:minHeight="48sp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_marginTop="1sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_below="@id/popupModuleCodeEdit"
            android:layout_toEndOf="@id/AssignmentDateLabel"
            android:layout_height="wrap_content"
            android:hint="@string/pickdate"/>
        <TextView
            android:id="@+id/AssignmentNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameLabel"
            android:textSize="15sp"
            android:layout_marginLeft="20sp"
            android:textStyle="bold"
            android:minHeight="48sp"
            android:layout_marginTop="14sp"
            android:layout_below="@id/popupModuleCodeEdit"
            android:layout_toEndOf="@id/popupAssignmentDateEdit"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/popupAssignmentNameEdit"
            android:minWidth="48sp"
            android:minHeight="48sp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_marginTop="1sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_below="@id/popupModuleCodeEdit"
            android:layout_toEndOf="@id/AssignmentNameLabel"
            android:layout_height="wrap_content"
            android:hint="@string/assigment"/>


        <!--        this is related to the Exam-->

        <TextView
            android:id="@+id/ExamDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="15sp"
            android:minHeight="48sp"
            android:textStyle="bold"
            android:layout_below="@id/AssignmentDateLabel"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/popupExamDateEdit"
            android:minWidth="48sp"
            android:minHeight="48sp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_marginTop="1sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_below="@id/popupAssignmentDateEdit"
            android:layout_toEndOf="@id/ExamDateLabel"
            android:layout_height="wrap_content"
            android:hint="@string/pickdate"/>
        <TextView
            android:id="@+id/ExamNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameLabel"
            android:textSize="15sp"
            android:textStyle="bold"
            android:minHeight="48sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:layout_below="@id/AssignmentNameLabel"
            android:layout_toRightOf="@id/popupExamDateEdit"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/popupExamNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/popupAssignmentNameEdit"
            android:layout_marginTop="1sp"
            android:hint="@string/exam"
            android:textColorHint="@color/black"
            android:minWidth="48sp"
            android:minHeight="48sp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_toEndOf="@id/ExamNameLabel"/>

        <!--        Lecture Room-->

        <TextView
            android:id="@+id/LectureRoomLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lecture_room_label"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="14sp"

            android:layout_below="@id/popupExamDateEdit"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/LectureRoomEdit"
            android:minWidth="48sp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_below="@id/popupExamDateEdit"
            android:layout_toEndOf="@id/LectureRoomLabel"
            android:layout_height="wrap_content"
            android:hint="@string/lecture_room"/>

        <!--        Tutorial Room-->

        <TextView
            android:id="@+id/TutorialRoomLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_room_label"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="14sp"
            android:layout_below="@id/LectureRoomLabel"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/TutorialRoomEdit"
            android:minWidth="48sp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="8sp"

            android:layout_below="@id/LectureRoomLabel"
            android:layout_toEndOf="@id/TutorialRoomLabel"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:hint="@string/toturorial_room"/>





    </RelativeLayout>


<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->
<!--        <EditText-->
<!--            android:id="@+id/popupModuleCodeEdit"-->
<!--            android:minWidth="48dp"-->
<!--            android:minHeight="48dp"-->
<!--            android:layout_width="70dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="Code"/>-->

<!--        <EditText-->
<!--            android:id="@+id/popupModuleNameEdit"-->
<!--            android:layout_width="match_parent"-->
<!--            android:minWidth="48dp"-->
<!--            android:minHeight="48dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="Module Name"/>-->
<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->
<!--        <EditText-->
<!--            android:id="@+id/popupAssignmentDateEdit"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:minWidth="48dp"-->
<!--            android:minHeight="48dp"-->
<!--            android:layout_marginTop="1dp"-->
<!--            android:hint="Due Date"-->
<!--            android:inputType="datetime" />-->
<!--        <EditText-->
<!--            android:id="@+id/popupAssignmentdueEdit"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:minWidth="48dp"-->
<!--            android:minHeight="48dp"-->
<!--            android:layout_marginTop="1dp"-->
<!--            android:hint="yes/no"/>-->
<!--        <EditText-->
<!--            android:id="@+id/popupAssignmentNameEdit"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:minWidth="48dp"-->
<!--            android:minHeight="48dp"-->
<!--            android:layout_marginTop="1dp"-->
<!--            android:hint="Assigment Name" />-->

<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->
<!--        <EditText-->
<!--            android:id="@+id/popupExamDateEdit"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:minWidth="48dp"-->
<!--            android:minHeight="48dp"-->
<!--            android:layout_marginTop="1dp"-->
<!--            android:hint="Exam Date"-->
<!--            android:inputType="datetime" />-->
<!--        <EditText-->
<!--            android:id="@+id/popupExamdueEdit"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:minWidth="48dp"-->
<!--            android:minHeight="48dp"-->
<!--            android:layout_marginTop="1dp"-->
<!--            android:hint="yes/no"/>-->
<!--        <EditText-->
<!--            android:id="@+id/popupExamNameEdit"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:minWidth="48dp"-->
<!--            android:minHeight="48dp"-->
<!--            android:layout_marginTop="1dp"-->
<!--            android:hint="Exam Name" />-->

<!--    </LinearLayout>-->
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->


<!--        <EditText-->
<!--            android:id="@+id/TutorialRoomEdit"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:minWidth="48dp"-->
<!--            android:minHeight="48dp"-->
<!--            android:layout_marginTop="1dp"-->
<!--            android:hint="Tutorial Room has 1 or 2 letters e.g 'MB' 206  " />-->


<!--    </LinearLayout>-->
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->


<!--        <EditText-->
<!--            android:id="@+id/LectureRoomEdit"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:minWidth="48dp"-->
<!--            android:minHeight="48dp"-->
<!--            android:layout_marginTop="1dp"-->
<!--            android:hint="Lecture Room has 1 or 2 letters e.g 'MB' 206  " />-->


<!--    </LinearLayout>-->

<!--    <Button-->
<!--        android:id="@+id/buttonAddModule"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Add Module" />-->


</RelativeLayout>

